2003-08-03  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/11704
	* g++.dg/template/dependent-expr2.C: New test.

	PR c++/11766
	* g++.dg/expr/ptrmem1.C: New test.

2003-08-03  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/9453
	* g++.dg/template/friend15.C: New test.

2003-08-03  Neil Booth  <neil@daikokuya.co.uk>

	* lib/dg-pch.exp: Work round PCH bug.

2003-08-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/builtins-1.c: Add macro helpers.  Add missing math
	builtins.  Move cases from builtins-4.c here.

	* gcc.dg/torture/builtin-math-1.c: New test taken from
	bits of gcc.dg/builtins-3.c, gcc.dg/builtins-5.c and also some
	additional cases.
	
	* gcc.dg/builtins-3.c, gcc.dg/builtins-4.c, gcc.dg/builtins-5.c:
	Delete.

2003-08-02  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/9447
	* g++.dg/template/using7.C: New test.

2003-08-02  Neil Booth  <neil@daikokuya.co.uk>

	* import1.c, import2.c: New tests.

2003-08-01  Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/eh/crossjump1.C: New test.

2003-08-01  Mark Mitchell  <mark@codesourcery.com>

	PR c++/11697
	* g++.dg/template/using6.C: New test.

	PR c++/11744
	* g++.dg/template/koenig2.C: New test.

2003-08-01  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/7983
	* g++.dg/parse/typedef4.C: New test.

2003-08-01  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/8442, c++/8806
	* g++.dg/template/elab1.C: New test.
	* g++.dg/template/type2.C: Likewise.
	* g++.dg/template/ttp3.C: Adjust expected error message.
	* g++.old-deja/g++.law/visibility13.C: Likewise.
	* g++.old-deja/g++.niklas/t135.C: Likewise.
	* g++.old-deja/g++.pt/ttp41.C: Likewise.
	* g++.old-deja/g++.pt/ttp43.C: Use qualified name for template
	template argument.
	* g++.old-deja/g++.pt/ttp44.C: Likewise.

2003-08-01  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/11295
	* g++.dg/ext/stmtexpr1.C: New test.

	* g++.dg/opt/tmp1.C: New test.

	PR c++/11525